Add database API crud example
