# src/App/Routes.php
@@ -8,3 +8,9 @@ $app->get('/hello', 'App\Controller\Hello:getStatusAPI')->setName('main_api');
 
 // Swagger Route
 $app->get('/swaggerui', 'App\Controller\Hello:openSwaggerUI');
+
+// Customer API Route
+$app->get('/customer', 'App\Controller\Customer:get');
+$app->post('/customer/add', 'App\Controller\Customer:add');
+$app->post('/customer/update', 'App\Controller\Customer:update');
+$app->delete('/customer/delete', 'App\Controller\Customer:delete');
